<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_ingresar_datos"
            android:title="@string/ingresar" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_listar"
            android:title="@string/listar" />

        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/icon_mapa"
            android:title="@string/mapa" />
        <item
            android:id="@+id/sensorFragment"
            android:icon="@drawable/icon_sensor"
            android:title="@string/sensor" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_cerrar"
            android:title="@string/salir" />
    </group>
</menu>