<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.principal.parcialdispmov.ui.home.HomeFragment"
        android:label="@string/ingresar"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.principal.parcialdispmov.ui.gallery.GalleryFragment"
        android:label="@string/listar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.principal.parcialdispmov.ui.slideshow.SlideshowFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.principal.parcialdispmov.ui.mapa.MapsFragment"
        android:label="@string/mapa"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/sensorFragment"
        android:name="com.principal.parcialdispmov.ui.sensor.SensorFragment"
        android:label="@string/sensor"
        tools:layout="@layout/fragment_sensor" />
</navigation>